--- a/src/main/resources/view/Documents/Referral_Letter_For_John_Doe_S1234567X.html
+++ b/src/main/resources/view/Documents/Referral_Letter_For_John_Doe_S1234567X.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Receipt for John Doe</title>
+    <title>Referral Letter for John Doe</title>
     <script>
         function loadDetails(titleString, headerString, nameString, icString, contentString) {
             document.title = titleString;
@@ -14,7 +14,7 @@
     </script>
     <h1>
         <img src = "../../images/CLInicLogo.PNG" alt = "CLInic's logo" align = "right" height="70px" width="350px">
-        <div class = "header" id="headerDiv">Receipt<br>Issued On: 29/10/2018 20:52:16</div>
+        <div class = "header" id="headerDiv">Referral Letter<br>Issued On: 29/10/2018 20:52:23</div>
     </h1>
 </head>
 <div class="main">
@@ -29,7 +29,7 @@
         </tr>
     </table>
     <br>
-    <span id="contentDiv"><table ID = "contentTable" width = 100%><col width = "700"><tr ID = "receiptHeader"><div class="contentHeader"><th>Prescription</th><th>Quantity</th><th>Unit Price</th><th>Total Price</th></div></tr><tr><td>Panadol</td><td>60</td><td>1</td><td>60</td></tr><tr ID = "receiptEnd"><td>Grand Total:</td><td>-</td><td>-</td><td>60.00</td></tr></table></span>
+    <span id="contentDiv">Dear Specialist, please assist the above-named patient in the following matter:<br>Go to nUH plz<br><br>Kindly do accept him under your care. Thank you very much.<br><br><b>Issuing Doctor:<b> DR CHESTER SNG<br><br></span>
     <br>
     <span style=" display: block; text-align: center">Have a nice day!</span>
 </div>
