--- a/src/main/resources/view/HistoryPanel.fxml
+++ b/src/main/resources/view/HistoryPanel.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="386.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox prefHeight="386.0" prefWidth="600.0">
-         <children>
-            <TableView editable="true" prefHeight="386.0" prefWidth="600.0" fx:id="diagnosisTableView">
-              <columns>
-                <TableColumn prefWidth="333.0" text="Diagnosis" fx:id="diagnosisCol"  />
-                  <TableColumn minWidth="0.0" prefWidth="100.0" text="Doctor" fx:id="doctorNameCol" />
-                  <TableColumn prefWidth="100.0" text="Timestamp" fx:id="timestampCol" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </VBox>
-   </children>
-</AnchorPane>
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pickOnBounds="true" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<children>
+    <TableView fx:id="diagnosisTableView" prefHeight="386.0" prefWidth="600.0">
+        <columns>
+            <TableColumn fx:id="diagnosisCol" prefWidth="361.0" resizable="false" text="Diagnosis" />
+            <TableColumn fx:id="doctorNameCol" minWidth="0.0" prefWidth="120.0" resizable="false" text="Doctor" />
+            <TableColumn fx:id="timestampCol" prefWidth="118.0" resizable="false" text="Timestamp" />
+        </columns>
+        <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+        </columnResizePolicy>
+    </TableView>
+</children>
+<cursor>
+    <Cursor fx:constant="DEFAULT" />
+</cursor>
+</VBox>
