--- a/src/main/resources/view/NotificationCard.fxml
+++ b/src/main/resources/view/NotificationCard.fxml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="105.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefHeight="150.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="105.0" prefWidth="58.0" />
-      <GridPane alignment="TOP_RIGHT" prefHeight="105.0" prefWidth="123.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
+      <AnchorPane prefHeight="161.0" prefWidth="200.0">
+         <children>
+            <Label fx:id="body" layoutY="28.0" prefHeight="122.0" prefWidth="200.0" text="body" />
+            <Label fx:id="header" prefHeight="34.0" prefWidth="200.0" text="header" />
+         </children>
+      </AnchorPane>
    </children>
 </HBox>
