--- a/src/main/resources/view/InformationPanel.fxml
+++ b/src/main/resources/view/InformationPanel.fxml
@@ -3,13 +3,13 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0">
             <children>
@@ -33,25 +33,27 @@
                                     <children>
                                         <TableView fx:id="upcomingAppointmentTable" prefHeight="168.0" prefWidth="798.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <columns>
-                                                <TableColumn prefWidth="75.0" text="S/N" >
+                                                <TableColumn prefWidth="75.0" text="S/N">
                                                     <cellValueFactory>
                                                         <PropertyValueFactory property="appointmentId" />
                                                     </cellValueFactory>
                                                 </TableColumn>
-                                                <TableColumn prefWidth="125" text="Appointment Date" >
+                                                <TableColumn prefWidth="150.0" text="Appt Date">
                                                     <cellValueFactory>
                                                         <PropertyValueFactory property="dateTime" />
                                                     </cellValueFactory>
                                                 </TableColumn>
-                                                <TableColumn prefWidth="125" text="Doctor" >
+                                                <TableColumn prefWidth="150.0" text="Doctor">
                                                     <cellValueFactory>
                                                         <PropertyValueFactory property="doctor" />
                                                     </cellValueFactory>
                                                 </TableColumn>
+                                                <TableColumn prefWidth="500.0" text="Prescriptions">
+                                                    <cellValueFactory>
+                                                        <PropertyValueFactory property="prescriptions" />
+                                                    </cellValueFactory>
+                                                </TableColumn>
                                             </columns>
-                                            <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
                                         </TableView>
                                     </children>
                                 </AnchorPane>
@@ -66,13 +68,27 @@
                                     <children>
                                         <TableView fx:id="pastAppointmentTable" prefHeight="168.0" prefWidth="798.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <columns>
-                                                <TableColumn prefWidth="75.0" text="S/N" />
-                                                <TableColumn prefWidth="125" text="Start Date" />
-                                                <TableColumn prefWidth="125" text="Doctor" />
+                                                <TableColumn prefWidth="75.0" text="S/N">
+                                                    <cellValueFactory>
+                                                        <PropertyValueFactory property="appointmentId" />
+                                                    </cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn prefWidth="150.0" text="Appt Date">
+                                                    <cellValueFactory>
+                                                        <PropertyValueFactory property="dateTime" />
+                                                    </cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn prefWidth="150.0" text="Doctor">
+                                                    <cellValueFactory>
+                                                        <PropertyValueFactory property="doctor" />
+                                                    </cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn prefWidth="500.0" text="Prescriptions">
+                                                    <cellValueFactory>
+                                                        <PropertyValueFactory property="prescriptions" />
+                                                    </cellValueFactory>
+                                                </TableColumn>
                                             </columns>
-                                            <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
                                         </TableView>
                                     </children>
                                 </AnchorPane>
