--- a/src/main/resources/view/Custom.css
+++ b/src/main/resources/view/Custom.css
@@ -309,6 +309,20 @@
     -fx-font-family: "IBM Plex Sans";
 }
 
+#volunteerTag {
+    -fx-padding: 0 0 5 0;
+}
+
+#volunteerTag .label {
+    -fx-text-fill: white;
+    -fx-background-color: -blue-2-;
+    -fx-padding: 2 5 2 5;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11.5;
+    -fx-font-family: "Open Sans"
+}
+
 .table-view {
     -fx-control-inner-background: -card-2-;
     -fx-background-color: transparent;
