--- a/src/main/resources/view/VolunteerPanel.fxml
+++ b/src/main/resources/view/VolunteerPanel.fxml
@@ -4,9 +4,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.FlowPane?>
 <VBox fx:id="volunteerPanel" styleClass="browser-panel" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <VBox alignment="CENTER_LEFT">
         <Label fx:id="volunteerNameLabel" styleClass="event-name" />
+        <FlowPane fx:id="volunteerTag" hgap="5"/>
         <HBox spacing="5" alignment="CENTER_LEFT">
             <Label fx:id="volunteerGenderLabel" styleClass="detail" />
         </HBox>
